--- a/user-service.yml
+++ b/user-service.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8083
+  port: 8081
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/users
+    url: jdbc:postgresql://localhost:5432/user
     username: postgres
-    password: password1
+    password: password-user
