--- a/hr-service.yml
+++ b/hr-service.yml
@@ -1,1 +1,8 @@
+server:
+  port: 8082
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/hr
+    username: postgres
+    password: password-hr
