--- a/finance-service.yml
+++ b/finance-service.yml
@@ -1,1 +1,8 @@
+server:
+  port: 8083
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/finance
+    username: postgres
+    password: password-finance
