--- a/user-service.yml
+++ b/user-service.yml
@@ -3,6 +3,6 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/user
+    url: jdbc:postgresql://localhost:5432/users
     username: postgres
     password: password-user
